--- a/index.html
+++ b/index.html
@@ -60,9 +60,47 @@
         </div>
 
         <!--workの箱-->
-        <div>
+        <div class="box-works">
+            <h2 class="sub-title">
+                <span class="color-green">W</span>orks
+            </h2>
 
+            <ul class="works-list">
+                <li>
+                    <img src="design/画像1.png" alt="Twitterクローンの画像">
+                    <h3>Twitterクローン</h3>
+                    <span>HTML / CSS / php / MySQL</span>
+                    <div class="link">
+                        <a href="">WEBサイト</a>
+                        <a href="">Github</a>
+                    </div>
+                </li>
+                <li>
+                    <img src="design/画像1.png" alt="Twitterクローンの画像">
+                    <h3>Twitterクローン</h3>
+                    <span>HTML / CSS / php / MySQL</span>
+                    <div class="link">
+                        <a href="">WEBサイト</a>
+                        <a href="">Github</a>
+                    </div>
+                </li>
+                <li>
+                    <img src="design/画像1.png" alt="Twitterクローンの画像">
+                    <h3>Twitterクローン</h3>
+                    <span>HTML / CSS / php / MySQL</span>
+                    <div class="link">
+                        <a href="">WEBサイト</a>
+                        <a href="">Github</a>
+                    </div>
+                </li>
+            </ul>
         </div>
     </div>
+    <!--footerタグの作成
+    ・coryrightの設定
+        Pタグを使用-->
+    <footer class="block-footer">
+        <p>Copyright ©TECH I.S.,Inc.</p>
+    </footer>
 </body>
 </html>
